[package]
name = "nft-staking-core"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_staking_core"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
mpl-core = { version = "0.11.1", features = ["anchor"] }


[dev-dependencies]
litesvm = "0.9.1"
solana-account = "3.4"
solana-keypair = "3.1"
solana-message = "3.0"
solana-native-token = "3.0"
solana-pubkey = "3.0"
solana-signer = "3.0"
solana-transaction = "3.0"
solana-instruction = "3.1"
solana-sdk-ids = "3.1"
solana-clock = "3.0"
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
spl-associated-token-account = "6.0.0"
sha2 = "0.10"
borsh = "0.10"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
